# suite

./: Cargo.toml  README.md  justfile  lefthook.yaml  renovate.json
.github/workflows/: ci.yaml  compliance.yaml  coverage.yaml  format-and-lint.yaml  test-and-build.yaml
plugins/meter/: Cargo.toml
plugins/meter/src/: lib.rs
plugins/pitch/: Cargo.toml
plugins/pitch/src/: lib.rs
